--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -17,3 +17,9 @@ jobs:
       run: dotnet build
     - name: Test
       run: dotnet test
+    - name: Pack
+      if: github.event_name != 'pull_request'
+      run: dotnet pack --configuration Release --version-suffix "$(date "+%s")" --output .
+    - name: Publish (MyGet)
+      if: github.event_name != 'pull_request'
+      run: dotnet nuget push *.nupkg --api-key ${{ secrets.myget_api }} --source https://www.myget.org/F/tkp1n/api/v2/package
