--- a/IoUring/IoUring.csproj
+++ b/IoUring/IoUring.csproj
@@ -23,6 +23,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="System.IO.Pipelines" Version="4.7.0" />
       <PackageReference Include="Tmds.LibC" Version="0.3.0-191113-181" />
     </ItemGroup>
 
