--- a/IoUring/IoUring.csproj
+++ b/IoUring/IoUring.csproj
@@ -3,6 +3,8 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp3.0</TargetFramework>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <LangVersion>latest</LangVersion>
+        <Nullable>enable</Nullable>
 
         <VersionPrefix>0.1.0</VersionPrefix>
 
