--- a/tests/IoUring.TestApp/IoUring.TestApp.csproj
+++ b/tests/IoUring.TestApp/IoUring.TestApp.csproj
@@ -5,7 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\IoUring.Transport\IoUring.Transport.csproj" />
+      <ProjectReference Include="..\..\src\IoUring.Transport\IoUring.Transport.csproj" />
     </ItemGroup>
 
 </Project>
