--- a/src/IoUring.Transport/IoUring.Transport.csproj
+++ b/src/IoUring.Transport/IoUring.Transport.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="..\..\externals\*.cs" />
+        <Compile Include="..\..\externals\*.cs" Link=".\Externals\*.cs" />
     </ItemGroup>
 
     <ItemGroup>
