--- a/nuget.config
+++ b/nuget.config
@@ -5,5 +5,6 @@
     <clear />
     <add key="nuget" value="https://api.nuget.org/v3/index.json" />
     <add key="myget-tmds" value="https://www.myget.org/F/tmds/api/v3/index.json" />
+    <add key="rh" value="https://www.myget.org/F/redhat-dotnet/api/v3/index.json" />
   </packageSources>
 </configuration>
