Use eventfd from Tmds.LibC

--- a/src/IoUring/IoUring.csproj
+++ b/src/IoUring/IoUring.csproj
@@ -26,7 +26,7 @@
 
     <ItemGroup>
       <PackageReference Include="System.IO.Pipelines" Version="4.7.0" />
-      <PackageReference Include="Tmds.LibC" Version="0.3.0-200121-184" />
+      <PackageReference Include="Tmds.LibC" Version="0.4.0" />
     </ItemGroup>
 
     <ItemGroup>
