Add comparison benchmark for concurrent and non-concurrent rings

--- a/tests/IoUring.Benchmarks/IoUring.Benchmarks.csproj
+++ b/tests/IoUring.Benchmarks/IoUring.Benchmarks.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\src\IoUring\IoUring.csproj" />
+        <ProjectReference Include="..\..\src\IoUring.Concurrent\IoUring.Concurrent.csproj" />
     </ItemGroup>
 
 </Project>
