--- a/tests/IoUring.Benchmarks/IoUring.Benchmarks.csproj
+++ b/tests/IoUring.Benchmarks/IoUring.Benchmarks.csproj
@@ -3,6 +3,8 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
