--- a/src/IoUring.Concurrent/IoUring.Concurrent.csproj
+++ b/src/IoUring.Concurrent/IoUring.Concurrent.csproj
@@ -38,7 +38,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Tmds.LibC" Version="0.4.0" />
+        <PackageReference Include="Tmds.LibC" Version="0.5.0-200414-200" />
     </ItemGroup>
 
     <ItemGroup>
