Exclude code generator from publish

--- a/src/IoUring.CodeGenerator/IoUring.CodeGenerator.csproj
+++ b/src/IoUring.CodeGenerator/IoUring.CodeGenerator.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <IsPublishable>false</IsPublishable>
     </PropertyGroup>
 
     <ItemGroup>
