Flatten ring hierarchy (replace shared base class with shared source files)

--- a/src/IoUring.Concurrent/IoUring.Concurrent.csproj
+++ b/src/IoUring.Concurrent/IoUring.Concurrent.csproj
@@ -5,6 +5,7 @@
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
+        <DefineConstants>IOURING_CONCURRENT</DefineConstants>
 
         <NoWarn>436</NoWarn>
 
