--- a/tests/IoUring.Tests/IoUring.Tests.csproj
+++ b/tests/IoUring.Tests/IoUring.Tests.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
