--- a/src/IoUring.CodeGenerator/IoUring.CodeGenerator.csproj
+++ b/src/IoUring.CodeGenerator/IoUring.CodeGenerator.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Tmds.LibC" Version="0.5.0-200421-204" />
+      <PackageReference Include="Tmds.LibC" Version="0.5.0" />
     </ItemGroup>
 
     <ItemGroup>
