--- a/src/IoUring/IoUring.csproj
+++ b/src/IoUring/IoUring.csproj
@@ -30,7 +30,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Tmds.LibC" Version="0.5.0-200421-204" />
+        <PackageReference Include="Tmds.LibC" Version="0.5.0" />
     </ItemGroup>
 
     <ItemGroup>
